Fix page width gap

--- a/_ltu-components/legacy/scss/_misc.scss
+++ b/_ltu-components/legacy/scss/_misc.scss
@@ -831,6 +831,7 @@
         width: 100vw;
         z-index: -1;
 
+        max-width: 100%;
         overflow-x: hidden; // fix safari overflow issue
     }
 
